fixed navbar spacing

--- a/src/components/NavBar/HomeNavBar.css
+++ b/src/components/NavBar/HomeNavBar.css
@@ -5,7 +5,7 @@
 .navBar {
     background-color: #FFD6BA;
     width: 100%;
-    height: 10em;
+    height: 10.5em;
     padding-top: 1.3em;
 }
 
