--- a/src/components/SearchBar/SearchBarCompact.css
+++ b/src/components/SearchBar/SearchBarCompact.css
@@ -1,18 +1,20 @@
-/* .searchContainer {
-    float: left;
-} */
-
-.SearchButtonImage {
-    object-fit: fill;
-    margin: 0;
-    padding: 0;
+.searchContainer {
+    padding: 0.5
 }
 
-.SearchText {
+.CompactSearchButtonImage {
+    margin: 0;
+    padding: 0;
+    width: 3.5em;
+}
+
+.CompactSearchText {
+    margin-left: 2em;
     font-size: 14px;
     font-family: Poppins;
     border: 1px solid grey;
-    width: 20em;
+    width: 18em;
+    height: 3em;
     border-radius: 20px;
     background: #f1f1f1;
     text-align: center;
@@ -20,8 +22,7 @@
     box-shadow: 0 2px 3px rgba(0,0,0,0.3)
 }
 
-.SearchSubmitButton {
-    max-height: 65px;
+.CompactSearchSubmitButton {
     border: none;
     background: #555B6E;
     border-radius: 20px;
@@ -29,6 +30,6 @@
     box-shadow: 0 3px 3px rgba(0,0,0,0.3)
 }
 
-.SearchSubmitButton:hover {
+.CompactSearchSubmitButton:hover {
     background: #7884ad;
 }
